fix max width in aligner

--- a/frontend/web/source_assets/css/place-add-photo.less
+++ b/frontend/web/source_assets/css/place-add-photo.less
@@ -5,6 +5,10 @@ body.place-add-photo {
     color: white;
   }
 
+  .valign-wrapper img.photo {
+    max-width: 100%;
+  }
+
   #main-content main {
     padding: 24px;
   }
